Changelog for Yancy

{{ $NEXT }}

1.031     2019-06-06 21:24:24-05:00 America/Chicago

    [Fixed]

    - Fixed screenshot display in documentation.

1.030     2019-06-06 21:05:22-05:00 America/Chicago

    [Added]

    - Added 'yancy.editor.include' and 'yancy.editor.menu' helpers.
      These helpers allow you to add new VueJS components to the editor
      application to help manage the content in your web application.

1.029     2019-06-06 00:22:57-05:00 America/Chicago

    [Fixed]

    - Fixed some bugs in the editor caused by switching to
      Yancy::Controller::Yancy.

    [Added]

    - Added Selenium tests for the Yancy editor

1.028     2019-06-04 12:11:51-05:00 America/Chicago

    [Fixed]

    - Fixed incompatibility with Mojo::JSON. Thanks @rabbiveesh! [Github #64]
    - Fixed some POD errors caught by CPANTS. Thanks @manwar! [Github #63]

1.027     2019-06-02 01:02:26-05:00 America/Chicago

    [DEPRECATED]

    - The Yancy::Controller::Yancy::API duplicated all the functionality
      of Yancy::Controller::Yancy for no good reason, so it is now
      deprecated.
    - The configuration for the API controller is now changed from
      `api_controller` to `editor.default_controller`.

    [Added]

    - The editor is now a plugin, Yancy::Plugin::Editor. This should
      help future development by making it easier to extend the editor,
      add new functionality, and even make it possible to have multiple
      instances of the editor.
    - Added Yancy::Help::Upgrading for help navigating the deprecations
      for v2.000.

1.026     2019-05-17 01:23:13-05:00 America/Chicago

    [DEPRECATED]

    These are the only deprecations until after version 2.000.

    - The "collections" configuration is now "schema". This is more
      descriptive and will allow for expanding Form and Controller
      plugins to accept ad-hoc schemas. The existing "collections"
      configuration will work, but will warn until version 2.000 (at